--- a/src/stylesheets/pagination.css
+++ b/src/stylesheets/pagination.css
@@ -14,6 +14,7 @@
   height: 25px;
   background-color: #dededf;
   border: none;
+  cursor: pointer;
 }
 
 .page-numbers-container .active {
@@ -27,4 +28,5 @@
 .skip-backward-icon,
 .fast-forward-icon {
   font-size: 22px;
+  cursor: pointer;
 }
